# sade

./: Cargo.toml
scenes/: cornell.ron
src/: aabb.rs  bvh.rs  camera.rs  image.rs  lib.rs  main.rs  material.rs  mesh.rs  perlin.rs  preview.rs  primitive.rs  ray.rs  texture.rs  world.rs
src/math/: add.rs  div.rs  mat4.rs  mod.rs  mul.rs  neg.rs  sub.rs  vec3.rs  vec4.rs
