[package]
name = "sade-h"
version = "0.1.0"
authors = ["joonardo <joonatan.bergholm@taitounited.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rayon = "1.5.0"
image = "0.23.12"
tobj = "2.0.3"
ron = "0.6.4"
serde = "*"
pixels = "0.2.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"

[profile.release]
lto = true
opt-level = 3
